@@ -1,3 +1,8 @@
+2010-03-04  Tom Tromey  <tromey@redhat.com>
+
+	* printcmd.c (printf_command): Pass dummy argument to
+	printf_filtered.
+
 2010-03-03  Tom Tromey  <tromey@redhat.com>
 
 	PR mi/11098:
